Frontend: remove object-fit to fix layout issue for safari. See #197

--- a/reunhangout/static/scss/pages/breakout/_breakoutstyle.scss
+++ b/reunhangout/static/scss/pages/breakout/_breakoutstyle.scss
@@ -116,7 +116,6 @@
     iframe {
       width: 100%;
       height: 100%;
-      object-fit: contain;
       border: none;
     }
   }
